# audioreach-pipewire-plugin

./: CONTRIBUTING.md  LICENSE  Makefile.am  README.md  configure.ac  pw-pal.pc.in
.github/workflows/: pre_merge_build.yml  stale-issues.yaml  trigger_lava_on_success.yml
ci/: build.sh  build_options.txt  files_to_copy.sh
configs/: 90-device-detection.conf  90-device-detection.lua  deep-buffer-combine-stream.conf  low-latency-combine-stream.conf  pw-pal-plugin.conf
debian/: audioreach-pipewire-plugin.install  changelog  control  copyright  rules
src/: pw-pal-plugin.c
